<?xml version="1.0"?>
<package format="2">
	<name>turtlesim_autodraw</name>
	<version>0.0.1</version>
	<description>Turtlesim Automated Drawing</description>


	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<!-- Example:  -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="gdavid0510@gmail.com">David Hong</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<!-- <license>MIT</license> -->


	<!-- <url type="website">http://wiki.ros.org/turtlesim_autodraw</url> -->
	<author email="gdavid0510@gmail.com">David Hong</author>


	<!-- The *depend tags are used to specify dependencies -->
	<buildtool_depend>catkin</buildtool_depend>
	<depend>geometry_msgs</depend>
	<depend>message_generation</depend>
	<depend>roscpp</depend>
	<!-- <build_depend>message_generation</build_depend> -->
	<!-- <build_depend>roscpp</build_depend> -->
	<!-- <build_export_depend>geometry_msgs</build_export_depend> -->
	<!-- <build_export_depend>roscpp</build_export_depend> -->
	<!-- <exec_depend>geometry_msgs</exec_depend> -->
	<!-- <exec_depend>roscpp</exec_depend> -->
	<!-- <exec_depend>message_generation</exec_depend> -->


	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>
